# ui_module

./: .gitignore  README.md
src/tomo_backup/: CMakeLists.txt  package.xml
src/tomo_backup/src/: main.cpp  main.qml  qml.qrc  recovery.cpp  recovery.h  tomo_backup.pro
src/tomo_backup/src/Dialog/: ModalDialogBox.qml
src/tomo_camera/: CMakeLists.txt  package.xml
src/tomo_camera/include/tomo_camera/: camera_oak.h
src/tomo_camera/src/: camera_oak.cpp  test_oak.cpp
src/tomo_rviz/: CMakeLists.txt  package.xml
src/tomo_rviz/include/tomo_rviz/: panel_dock_widget.h  render_panel.h  visualization_frame.h  visualizer_app.h
src/tomo_rviz/src/: displays_panel.cpp  main.cpp  panel_dock_widget.cpp  panel_factory.cpp  render_panel.cpp  visualization_frame.cpp  visualizer_app.cpp
src/tomo_ui/: CMakeLists.txt  package.xml
src/tomo_ui/config/: alarm_code.yaml  carton_iomap.yaml  carton_sm.yaml  carton_ui.yaml
src/tomo_ui/config/command/: Xavier Restart.desktop  Xavier Shutdown.desktop  XavierRestart.sh  XavierShutdown.sh  backup.sh  changeCamID.sh  checkZipFile.sh  check_uri.sh  list_dir.py  openUI.exp  reboot.sh  recovery.sh  run_rviz.sh  run_tomo_ui.sh  shutdown.sh  syncTime.exp  tomoui.desktop  updateControl.exp  updateImaging.exp  updateUi.exp
src/tomo_ui/config/ssh/: 1_Control_0.exp  2_Server_1.exp  3_Vision_0.exp  4_Planner_3.exp  5_Sequence_5.exp
src/tomo_ui/launch/: tomo_ui.launch
src/tomo_ui/src/: ControlBar.qml  DesignProject.pro  SystemBar.qml  TabControlBar.qml  main.cpp  main.qml  qml.qrc  qtquickcontrols2.conf
src/tomo_ui/src/AICore/: station_core.cpp  station_core.h
src/tomo_ui/src/Component/: ButtonMaterial.qml  ButtonText.qml  ComboBoxCustom.qml  FieldTextWithKeyboard.qml  Keyboard.qml  TooltipWindow.qml
src/tomo_ui/src/Dialog/: LoadingPopup.qml  ModalDialogBox.qml  modal_dialogbox.cpp  modal_dialogbox.h
src/tomo_ui/src/Model/: image_model.cpp  image_model.h  login_model.cpp  login_model.h  notify_model.cpp  notify_model.h
src/tomo_ui/src/Model/TomoModel/: mode_model.cpp  mode_model.h  state_model.cpp  state_model.h
src/tomo_ui/src/Script/Config/: cfg_app.cpp  cfg_app.h
src/tomo_ui/src/Script/Define/: struct_def.h
src/tomo_ui/src/Script/Utilities/: utilities.cpp  utilities.h
src/tomo_ui/src/View/: ImageView.qml  Login.qml  NotifyBar.qml  NotifyView.qml  Track.qml
src/tomo_ui/src/View/DashboardView/: DashboardView.qml  ListDir.qml
src/tomo_ui/src/View/FeatureView/: FileDialogView.qml
src/tomo_ui/src/View/IOControl/: IOControl.qml
src/tomo_ui/src/View/Production/: AbortLot.qml  EndLotPopup.qml  EndLotShowup.qml  HistoryTable.qml  LotDataTable.qml  ProductionView.qml  StartLotShowup.qml
src/tomo_ui/src/View/Production/StationLayout/: FunctionLayout1.qml  FunctionLayout10.qml  FunctionLayout11.qml  FunctionLayout12.qml  FunctionLayout13.qml  FunctionLayout2.qml  FunctionLayout3.qml  FunctionLayout4.qml  FunctionLayout5.qml  FunctionLayout6.qml  FunctionLayout7.qml  FunctionLayout8.qml  FunctionLayout9.qml  Parameters.qml  StationLayout.qml
src/tomo_ui/src/View/SettingView/: InputFileNameDialog.qml  Installation.qml  SavedListDialog.qml  SettingView.qml  SyncTime.qml
src/tomo_ui/src/View/Splash/: SplashScreen.qml
src/tomo_ui/src/View/SystemLogView/: BaseTerminal.qml  SystemLogView.qml
src/tomo_ui/src/View/TomoView/: TomoView.qml
src/tomo_ui/src/View/TomoView/FeatureView/: ListModes.qml  ListStates.qml
src/tomo_ui/src/ViewModel/: controlbar_vm.cpp  controlbar_vm.h  image_view_vm.cpp  image_view_vm.h  image_writer.cpp  image_writer.h  login_vm.cpp  login_vm.h  main_vm.cpp  main_vm.h  master_app.cpp  master_app.h  systembar_vm.cpp  systembar_vm.h  track_vm.cpp  track_vm.h
src/tomo_ui/src/ViewModel/DashboardVM/: dash_board_vm.cpp  dash_board_vm.h
src/tomo_ui/src/ViewModel/HeadVM/: head_vm.cpp  head_vm.h
src/tomo_ui/src/ViewModel/ImagingVM/: imaging_client_vm.cpp  imaging_client_vm.h
src/tomo_ui/src/ViewModel/IoVM/: io_control_vm.cpp  io_control_vm.h
src/tomo_ui/src/ViewModel/NotifyVM/: notify_vm.cpp  notify_vm.h
src/tomo_ui/src/ViewModel/PimVM/: pim_vm.cpp  pim_vm.h
src/tomo_ui/src/ViewModel/ProductionVM/: production_vm.cpp  production_vm.h
src/tomo_ui/src/ViewModel/SettingVM/: setting_vm.cpp  setting_vm.h
src/tomo_ui/src/ViewModel/ShipperVM/: shipper_vm.cpp  shipper_vm.h
src/tomo_ui/src/ViewModel/StationVM/: station_vm.cpp  station_vm.h
src/tomo_ui/src/ViewModel/SystemLogVM/: base_terminal.cpp  base_terminal.h  system_log_vm.cpp  system_log_vm.h
src/tomo_ui/src/ViewModel/TomoVM/: tomo_vm.cpp  tomo_vm.h
src/tomo_ui/src/ViewModel/TomoVM/Feature/: mode_tomo_vm.cpp  mode_tomo_vm.h  state_tomo_vm.cpp  state_tomo_vm.h
src/utilities/setup/: tomo_c_setup.sh
